Changelog:
from 09.05.2014:
- fix Depend: librtmp1
- change Version to 1.61

from 25.04.2014:
- fix Bouquet: Deutsche Serien (Thx @humiboy)

from 25.04.2014:
- add "ilu_" to Bouquetfilenames (no more collision with Userbouquenames!) thx Black_64
- change Version to 1.60

from 18.04.2014:
- add Language: frensh  (Thx milouille)
- change to Version 1.55
- add Converter: https://

from 15.04.2014:
- add Bouquet: Sky Sports UK 
- add Bouquet: Deutsche Serien 
- add Bouquet: UK Radio
- add Bouquet: USA Radio

from 10.04.2014:
- don't install adult channels with install all (yellow button)Thx Black64
- remove Button: Downloadlist (not needed!!) Thx Black64
- change Version to 1.52

from 09.04.2014:
- fix IO0 Update Script (Thx szudena)

from 06.04.2014:
- small fix for GS! Thx Black64
- change Version to 1.51

from 04.04.2014:
- new funktion: take Bouquetdownloadfile from Internet (Fallback to local File!) Thx Black64
- change Version to 1.50
- add Bouquet: Neset Ertas, Afrikanisches Radio, Amerikanisches Radio, Bosnische Subtitle Filme, Spanische Filme
- many changes/additions at bouquetfiles

from 03.04.2014:
- add Bouquet: Cartoons
- add Bouquet: Vietnam Series Karakoe Clip

from 31.03.2014:
- add Language: Slowakisch  (Thx Advance155)
- change to Version 1.41

from 30.03.2014:
- add Bouquet: Deutsch_mit_diversen_S_k_y

from 28.03.2014:
- fix Germanbouquetfile

from 27.03.2014:
- fix Oestereich & Swiss Radio
- fix Timeout & GS

from 26.03.2014:
- several fixes: (Thx Black_64)
  - fix hu.txt
  - fix ( ) in bouquet name
  - added socket timeout
  - add version to debug 
-fix ar.txt

from 20.03.2014:
- fix ID0 Update Teledunet (Thx testi)

from 16.03.2014:
- add first Streams for Livestreamer (Thx @mydebian)

from 09.03.2014:
- fix Converter: Russia SibirTelecom

from 08.03.2014:
- add Bouquet:  English Vietnam Movies

from 27.02.2014:
- add new language-file: hungary (Thx @pisti)

from 24.02.2014:
- remove Bouquet: Olympia

from 22.02.2014:
- add Bouquet: Georgia
